update with more personal projects

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
 						<!-- Coursework -->
 							<article id="coursework">
 								<h2 class="major">Coursework</h2>
+								<h3>Machine Learning Engineering</h3>
+								<div class="image about"><a href="https://www.fourthbrain.ai" target="_blank" rel="noopener noreferrer"><img src="images/MLE7_cert.png" alt="" /></a>
+									<h4>Machine Learning Engineer</h4>
+										<p>
+											Requirements: <br>
+											&nbsp;&nbsp;&nbsp;&nbsp;- 16 week program (~20 hours a week) <br>
+											&nbsp;&nbsp;&nbsp;&nbsp;-  Weekly assignments and coding sessions<br>
+											&nbsp;&nbsp;&nbsp;&nbsp;- Developing and deploying a final capstone project <br>
+										</p>
+									</div><br><br>
 								<h3>Data Science</h3>
 								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/track/bf4f2d26657a0cea0bb838efd0df91482ad438c9" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
 								<h4>Data Science with Python</h4>
@@ -109,7 +119,7 @@
 										&nbsp;&nbsp;&nbsp;&nbsp;- Demonstrated skills on external project <br>
 										&nbsp;&nbsp;&nbsp;&nbsp;- Lead Power BI trainings within EY to over 400+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;coworkers (Staff-Partners)
 									</p>
-								</div><br>
+								</div><br><br>
 								<h3>Machine Learning</h3>
 								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/course/b35bb101ffcd2f3eb97fd1f17cdefbe99a5d4271" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
 								<h4>Machine Learning for Business</h4>
@@ -135,7 +145,7 @@
 										&nbsp;&nbsp;&nbsp;&nbsp;- PCA and t-SNE <br>
 										&nbsp;&nbsp;&nbsp;&nbsp;- NLP and tf-idf <br>
 									</p>
-								</div><br>
+								</div><br><br>
 								<h3>Programming</h3>
 								<div class="image about"><a href="https://www.datacamp.com/statement-of-accomplishment/course/8931666c5b50fcf1008e089016069f27d73ff0c6?share=true" target="_blank" rel="noopener noreferrer"><img src="images/datacamp_logo.png" alt="" /></a>
 								<h4>Writing Efficient Python Code</h4>
@@ -153,9 +163,27 @@
 
 						<!-- Personal Projects -->
 							<h2 class="major">Personal Projects</h2><br>
+							<h3>Movie Recommendation Engine</h3>
+							<span class="image fit"><a href="https://github.com/mcastelli5/Movie-Recommendation-Engine" target="_blank" rel="noopener noreferrer"><img src="images/movie_rec_FE.png" alt="" /></a>
+								<figcaption>Fig.1: Movie Recommender - Click for more detail!</figcaption>
+							</span>
+							<p>
+								As part of my FourthBrain course, I developed and deployed (now only available locally) a movie recommendation engine that utilizes content-based and collaborative filtering techniques to personalize movie recommendations for users. The main objective of the microservice is to address the cold start problem for new users on a streaming application by providing tailored recommendations with minimal information about the user. 
+								<br><br>
+								Click the image above to explore the recommender system and the overall structure of the application. This is a great base for a recommender system that will have further iterations and enhancements to benefit its users!
+							</p><br>
+							<h3>Customer Segmentation</h3>
+							<span class="image fit"><a href="https://github.com/mcastelli5/Customer-Segmentation" target="_blank" rel="noopener noreferrer"><img src="images/customer_seg.png" alt="" /></a>
+								<figcaption>Fig.2: Customer Segmentation - Click for more detail!</figcaption>
+							</span>
+							<p>
+								Ecom Co. (fake e-commerce company) wanted to better understand their customers, and uncover any hidden patterns that their consumer transaction data had to offer. This initiative will allow the company to unlock a wide range of cross-functional value to implement into various business lines including marketing, sales, planning, etc.
+								<br><br>
+								Click the image above to explore the results and the definitions for each customer segment. These customer segments could assist in better understanding customer tendencies!
+							</p><br>
 							<h3>Spotify Artist Analyzer</h3>
 							<span class="image fit"><a href="https://github.com/mcastelli5/Spotify-Artist-Analyzer" target="_blank" rel="noopener noreferrer"><img src="images/artist_analyzer_rdrchart.png" alt="" /></a>
-								<figcaption>Fig.2: Spotify Artist Analyzer - Click for more detail!</figcaption>
+								<figcaption>Fig.3: Spotify Artist Analyzer - Click for more detail!</figcaption>
 							</span>
 							<p>
 								In this project, the Spotify API (Spotipy) and several python data analysis/visualization libraries were utilized to create an "Artist Analyzer". With the help of the user's input to determine which artists to include, the analyzer creates different slices of artist information, and several visualizations for more comprehensive analysis.
@@ -165,17 +193,17 @@
 								Click the image above to explore the Analyzer and the definitions for each feature. Some artists may be more similar than you think!
 							</p><br>
 
-								<h3>Forecasting the Stock Market</h3>
-								<span class="image fit"><a href="https://github.com/mcastelli5/Forecasting-stock-market" target="_blank" rel="noopener noreferrer"><img src="images/forecasting_the_stock_market_ss.png" alt="" /></a>
-									<figcaption>Fig.3: Forecasting the Stock Market - Click for more detail!</figcaption>
-								</span>
-								<p>
-									In this project, two machine learning algorithms are utilized, Vector Support Regression and Dynamic Time Warping, in an effort to enhance my competitive advantage in the stock market. These models were benchmarked against basic intraday and overnight buying strategies, to assess the effectiveness and credibility over a certain period of time.
-									<br><br>
-									Although forecasting the stock market is nearly impossible, I had a great opportunity to experiment with two completely different machine learning models, and learn the similarities/differences in a real world example.
-									<br><br>
-									Click the image above for a deeper dive into the technical aspects of the project and the final results!
-								</p>
+							<h3>Forecasting the Stock Market</h3>
+							<span class="image fit"><a href="https://github.com/mcastelli5/Forecasting-stock-market" target="_blank" rel="noopener noreferrer"><img src="images/forecasting_the_stock_market_ss.png" alt="" /></a>
+								<figcaption>Fig.4: Forecasting the Stock Market - Click for more detail!</figcaption>
+							</span>
+							<p>
+								In this project, two machine learning algorithms are utilized, Vector Support Regression and Dynamic Time Warping, in an effort to enhance my competitive advantage in the stock market. These models were benchmarked against basic intraday and overnight buying strategies, to assess the effectiveness and credibility over a certain period of time.
+								<br><br>
+								Although forecasting the stock market is nearly impossible, I had a great opportunity to experiment with two completely different machine learning models, and learn the similarities/differences in a real world example.
+								<br><br>
+								Click the image above for a deeper dive into the technical aspects of the project and the final results!
+							</p>
 
 						<!-- Work Acknowledgements -->
 							<h2 class="major">Acknowledgements</h2><br>
