Change profile picture

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<div class="image about">
-									<img src="images/Castelli, Matthew High Res.jpg" alt="" />
+									<img src="images/Castelli, Matthew High Resolution.jpg" alt="" />
 									<p>&#128075; &nbsp;&nbsp; Hi, I'm Matt </p>
 									<p>&#128188; &nbsp;&nbsp; Senior Data Scientist @ EY</p>
 									<p>&#128509; &nbsp;&nbsp; Based in New York City; DC Native </p>
