--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Matt Castelli</h1>
-								<p>Senior Data Scientist</p>
+								<p>Analytics Engineer; Ex-Data Scientist</p>
 							</div>
 						</div>
 						<nav>
