--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<div class="image about">
 									<img src="images/Castelli, Matthew High Resolution.jpg" alt="" />
 									<p>&#128075; &nbsp;&nbsp; Hi, I'm Matt </p>
-									<p>&#128188; &nbsp;&nbsp;  Analytics Engineer @ Headspace</p>
+									<p>&#128188; &nbsp;&nbsp; Analytics Engineer @ Headspace</p>
 									<p>&#128509; &nbsp;&nbsp; Based in New York City </p>
 									<p>&#128171; &nbsp;&nbsp; Aspiring Data-Driven Leader </p>
 									<p>
@@ -60,12 +60,13 @@
 								<h3>Languages</h3>
 								<ul>
 									<li>Python (Pandas, NumPy, Scikit-learn, TensorFlow, Keras, etc.)</li>
-									<li>Apache Spark (PySpark and MLlib)</li>
+									<li>dbt</li>
+									<li>PySpark</li>
 									<li>SQL</li>
-									<li>HTML, CSS, & JavaScript</li>
 								</ul>
 								<h3>Visualization Tools</h3>
 								<ul>
+									<li>Looker</li>
 									<li>Power BI</li>
 									<li>Tableau</li>
 									<li>Python Libraries - Seaborn, Matplotlib, and Plotly</li>
@@ -73,7 +74,7 @@
 								<h3>Other Analytical Tools</h3>
 								<ul>
 									<li>Databricks</li>
-									<li>Anaconda Application Suite (Spyder, Jupyter Notebook, and JupyterLab)</li>
+									<li>Jupyter Notebook</li>
 									<li>Snowflake</li>
 								</ul>
 							</article>
